--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 		
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap-min.css">
+		<link rel="stylesheet" type="text/css" href="./css/font-awesome-min.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 
@@ -15,15 +15,12 @@
 		
 		<script defer src="./js/jquery-2.1.0.js"></script>
 		<script defer src="./js/bootstrap.js"></script>
-		<!-- <script defer src="http://code.jquery.com/jquery-2.1.0.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  		<script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  		<script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
-
-		<script defer src="./js/blocs.js"></script>
-		<script defer src="./js/jqBootstrapValidation.js"></script>
-		<script defer src="./js/formHandler.js"></script>
-		<script defer src="./js/jquery.touchSwipe.js" defer></script>
-		<script defer src="./js/gmaps.js"></script>
+		
+		<script src="./js/blocs.js" defer ></script>
+		<script src="./js/jqBootstrapValidation.js" defer ></script>
+		<script src="./js/formHandler.js" defer ></script>
+		<script src="./js/jquery.touchSwipe.js" defer></script>
+		<!-- <script src="./js/gmaps.js" defer ></script> -->
 	
 
 		<title>La chouette agence - Entreprise de webdesign basée à Lyon</title>
