--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 		
-		<link rel="stylesheet" type="text/css" href="./css/bootstrap-min.css" defer>
+		<link rel="stylesheet" type="text/css" href="./css/bootstrap-min.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome-min.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 
 		
 		
-		<script defer src="./js/jquery-2.1.0.js"></script>
-		<script defer src="./js/bootstrap.js"></script>
+		<script src="./js/jquery-2.1.0.js" defer></script>
+		<script src="./js/bootstrap.js" defer></script>
 		
 		<script src="./js/blocs.js" defer ></script>
 		<script src="./js/jqBootstrapValidation.js" defer ></script>
@@ -40,7 +40,7 @@
 
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de La chouette agence" height="40" /></a>
+							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo" height="40" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
@@ -87,7 +87,7 @@
 					</div>
 					<div class="row">
 						<div class="col-sm-12 text-center">
-							<p>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</h2>
+							<p>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</p>
 						</div>
 					</div>
 					<div class="row voffset-lg med-width-whitespace">
@@ -215,10 +215,10 @@
 					<div class="container bloc-md">
 						<div class="row">
 							<div class="col-sm-12">
-								<h2 class="text-center hero-bloc-text white">
+								<h2 class="text-center hero-bloc-text ltc-black">
 									Parlons web design !
 								</h2>
-								<p class="text-center mg-lg white tight-width-whitespace">
+								<p class="text-center mg-lg ltc-black tight-width-whitespace">
 									Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 									Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 								</p>
@@ -231,28 +231,28 @@
 					<div class="container bloc-lg">
 						<div class="row">
 							<div class="col-sm-6">
-								<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+								<form id="form_1" method="post" action="includes/form_1.php" novalidate >
 									<div class="form-group">
 										<label for="name">
-											Nom
+											Nom*
 										</label>
 										<input id="name" class="form-control" required />
 									</div>
 									<div class="form-group">
 										<label for="email">
-											Adresse email
+											Adresse email*
 										</label>
 										<input id="email" class="form-control" type="email" required lang="fr" />
 									</div>
 									<div class="form-group">
 										<label for="input_504">
-											Comment nous avez-vous connu ?
+											Comment nous avez-vous connu ?*
 										</label>
 										<input class="form-control" type="text" required id="input_504" />
 									</div>
 									<div class="form-group">
 										<label for="message">
-											Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+											Brief de votre projet (Ajoutez autant de détails que nécessaire)*<br>
 										</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 									</div> 
 									<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
@@ -264,7 +264,7 @@
 								<p>
 									contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 								</p>
-								<iframe title="Géolocalisation de La Chouette Agence" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.083137365213!2d4.827978615608054!3d45.76952407910576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1617695846003!5m2!1sfr!2sfr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+								<iframe title="Géolocalisation de La Chouette Agence" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.083137365213!2d4.827978615608054!3d45.76952407910576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1617695846003!5m2!1sfr!2sfr" allowfullscreen="" ></iframe>
 							</div>
 						</div>
 					</div>
@@ -273,7 +273,7 @@
 			<!-- bloc-6 END -->
 
 <!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+<a href="#" aria-label="Bouton pour revenir au début de la page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
 
 
@@ -282,26 +282,26 @@
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<p class="text-center white">
+							<p class="text-center ltc-black">
 								La chouette agence - Agence web basée à Lyon.<br>
 							</p>
 							<div class="row row-no-gutters social">
-								<div class="col-sm-3">
+								<div class="col-xs-3">
 									<div class="text-center">
 										<a class="social" href="https://twitter.com/" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
-								<div class="col-sm-3">
+								<div class="col-xs-3">
 									<div class="text-center">
 										<a class="social" href="https://fr-fr.facebook.com/" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
-								<div class="col-sm-3">
+								<div class="col-xs-3">
 									<div class="text-center">
 										<a class="social" href="https://dribbble.com/" aria-label="Dribble"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
-								<div class="col-sm-3">
+								<div class="col-xs-3">
 									<div class="text-center">
 										<a class="social" href="https://www.instagram.com/" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
