--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 			<!-- bloc-6 END -->
 
 <!-- ScrollToTop Button -->
-<a href="#" aria-label="Bouton pour revenir au début de la page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+<a  aria-label="Bouton pour revenir au début de la page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
 
 
