--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 						</div>
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav">
-								<li><a href="#bloc-1-hero">Accueil</a></li>
-								<li><a href="#bloc-2-services">Services</a></li>
-								<li><a href="#bloc-3-what-i-do">Objectifs</a></li>
-								<li><a href="#bloc-4-portfolio">Réalisations</a></li>
-								<li><a href="#bloc-6">Contact</a></li>
+								<li><a class="lien" href="#présentation">Accueil</a></li>
+								<li><a class="lien" href="#services">Services</a></li>
+								<li><a class="lien" href="#objectifs">Objectifs</a></li>
+								<li><a class="lien" href="#réalisations">Réalisations</a></li>
+								<li><a class="lien" href="#contact">Contact</a></li>
 							</ul>
 						</div>
 					</nav>
@@ -60,7 +60,7 @@
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-presentation -->
-			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+			<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="présentation">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
@@ -78,7 +78,7 @@
 		<!-- bloc-1-presentation END -->
 
 		<!-- bloc-2-services -->
-			<section class="bloc bgc-white l-bloc" id="bloc-2-services">
+			<section class="bloc bgc-white l-bloc" id="services">
 				<div class="container bloc-md">
 					<div class="row">
 						<h2 class="col-sm-12 text-center">
@@ -131,7 +131,7 @@
 		<!-- bloc-2-services END -->
 
 		<!-- bloc-3-what-i-do -->
-			<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+			<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="objectifs">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace black-background">
 						<div class="col-sm-12">
@@ -152,7 +152,7 @@
 		<!-- bloc-3-what-i-do END -->
 
 		<!-- bloc-4-portfolio -->
-			<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+			<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="réalisation">
 				<div class="container bloc-lg">
 					<div class="row">
 						<h2 class="col-sm-12 text-center">
@@ -210,7 +210,7 @@
 		<!-- bloc-4-portfolio END -->
 
 		<!-- bloc-6 -->
-			<section id="bloc-6">
+			<section id="contact">
 				<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" >
 					<div class="container bloc-md">
 						<div class="row">
@@ -264,7 +264,7 @@
 								<p>
 									contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 								</p>
-								<iframe title="Géolocalisation de La Chouette Agence" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.083137365213!2d4.827978615608054!3d45.76952407910576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1617695846003!5m2!1sfr!2sfr" allowfullscreen="" ></iframe>
+								<iframe tabindex="-1" title="Géolocalisation de La Chouette Agence" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.083137365213!2d4.827978615608054!3d45.76952407910576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb020f3664e9%3A0x13e3d71752922c1f!2s2%20Place%20Sathonay%2C%2069001%20Lyon!5e0!3m2!1sfr!2sfr!4v1617695846003!5m2!1sfr!2sfr" allowfullscreen="" ></iframe>
 							</div>
 						</div>
 					</div>
@@ -273,7 +273,7 @@
 			<!-- bloc-6 END -->
 
 <!-- ScrollToTop Button -->
-<a  aria-label="Bouton pour revenir au début de la page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+<a  tabindex="0" aria-label="Bouton pour revenir au début de la page" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
 
 
