--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo" height="40" /></a>
+							<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Logo de l'entreprise en webdesign basée à Lyon" height="40" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
@@ -66,10 +66,10 @@
 						<div class="col-sm-12">
 							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo de La chouette agence" />
 							<h1 class="text-center hero-bloc-text tc-white ">
-								La chouette agence.
+								La chouette agence
 							</h1>
 							<div class="text-center">
-								<a href="#bloc-6" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+								<a href="#contact" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 							</div>
 						</div>
 					</div>
@@ -143,7 +143,7 @@
 							</p>
 							<p class="text-center white">
 								Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
-								<a class="ltc-white bold-link" href="#bloc-6">Contactez notre équipe</a><br>
+								<a class="ltc-white bold-link" href="#contact">Contactez notre équipe</a><br>
 							</p>
 						</div>
 					</div>
@@ -152,7 +152,7 @@
 		<!-- bloc-3-what-i-do END -->
 
 		<!-- bloc-4-portfolio -->
-			<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="réalisation">
+			<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="réalisations">
 				<div class="container bloc-lg">
 					<div class="row">
 						<h2 class="col-sm-12 text-center">
